syntax = "proto3";

option csharp_namespace = "CoolShop.Inventory.Grpc";

package InventoryApi;

service Inventory {
    rpc GetInventory(InventoryRequest) returns (InventoryResponse);
}

message InventoryRequest {
    string InventoryId = 1;
}

message InventoryResponse {
    string InventoryId = 1;
    int32 QuantityAvailable = 2;
    int32 QuantityOnHold = 3;
}